; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_BioToP12.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_BioToP12.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@openssl_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @BioToP12(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %21

8:                                                ; preds = %1
  %9 = load i32, i32* @openssl_lock, align 4
  %10 = call i32 @Lock(i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32* @d2i_PKCS12_bio(i32* %11, i32* null)
  store i32* %12, i32** %4, align 8
  %13 = load i32, i32* @openssl_lock, align 4
  %14 = call i32 @Unlock(i32 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %8
  store i32* null, i32** %2, align 8
  br label %21

18:                                               ; preds = %8
  %19 = load i32*, i32** %4, align 8
  %20 = call i32* @PKCS12ToP12(i32* %19)
  store i32* %20, i32** %2, align 8
  br label %21

21:                                               ; preds = %18, %17, %7
  %22 = load i32*, i32** %2, align 8
  ret i32* %22
}

declare dso_local i32 @Lock(i32) #1

declare dso_local i32* @d2i_PKCS12_bio(i32*, i32*) #1

declare dso_local i32 @Unlock(i32) #1

declare dso_local i32* @PKCS12ToP12(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
